Updates to Login Lifecycle

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -107,3 +107,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.err-msg {
+  font-family:Lato-Regular;
+  font-size:12px;
+  color:red;
+  letter-spacing:0;
+  text-align:left;
+}
