--- a/src/app/newsfeed-container/newsfeed-container.component.css
+++ b/src/app/newsfeed-container/newsfeed-container.component.css
@@ -3,9 +3,10 @@
   overflow-y: scroll;
 }
 .list-group-item{
-  font-family:Lato-Semibold;
+  font-family:Lato-Regular;
   font-size:14px;
-  color:#000000;
+  color:#83868a;
+  border:none;
 }
 
 .card-header-text {
@@ -17,7 +18,10 @@
 }
 
 .selected {
-  background-color:lightgrey;
+  /*background-color:lightgrey;*/
+  font-family:Lato-Bold;
+  color:#433089;
+  /*font-size:18px;*/
 }
 
 .sticky-filters{
