--- a/src/app/newsfeed/newsfeed.component.css
+++ b/src/app/newsfeed/newsfeed.component.css
@@ -208,6 +208,7 @@ h5 {
   width:148px;
   height:24px;
   text-align:center;
+  /*border:1px solid #433089;*/
 }
 .tag-text {
   font-family:Lato-Semibold;
