--- a/src/app/update/update.component.html
+++ b/src/app/update/update.component.html
@@ -5,10 +5,17 @@
         <div class="card-block">
           <h4 class="card-title">Personal Information</h4>
           <div class="form-group">
-            <label for="firstname">First Name</label>
-            <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.first_name">
-            <label for="firstname">Last Name</label>
-            <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.last_name">
+            <div class="d-flex flex-row">
+              <div class="d-flex flex-column mr-4" style="width:45%">
+                <label for="firstname">First Name</label>
+                <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.first_name">
+              </div>
+              <div class="d-flex flex-column" style="width:45%">
+                <label for="firstname">Last Name</label>
+                <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.last_name">
+              </div>
+            </div>
+
             <label for="firstname">School Program</label>
             <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.program">
             <label for="firstname">What's your story?</label><br>
@@ -24,7 +31,7 @@
       </div>
       <br>
       <h2>Work Experience</h2>
-      <div class="card mt-2" *ngFor="let exp of updateObj.work_experiences_attributes; let i = index">
+      <div class="card my-3" *ngFor="let exp of work_experiences_attributes; let i = index">
         <div class="card-block">
           <div class="form-group">
             <label for="firstname">Company</label>
