Documents Page and Error Fix
- Added documents page
- Profile sidebar now works appropriately

--- a/src/app/newsfeed/newsfeed.component.html
+++ b/src/app/newsfeed/newsfeed.component.html
@@ -6,8 +6,7 @@
         </div>
       </div>
     </div>
-    <div *ngFor="let object of events | mapToIterable" style="margin-bottom:1rem">
-      <div *ngFor="let event of object.val.events">
+    <div *ngFor="let event of events" style="margin-bottom:1rem">
         <div *ngIf="matchesTags(event) || !filtersApplied">
         <!-- <span class="event-divider mt-4">{{object.val.divider}}</span><hr/> -->
           <div class="card mt-3" *ngIf="(clubID == 0 || clubID === event.club_id)" (click)="onSelect(event)">
@@ -35,7 +34,6 @@
             </div> -->
           </div>
         </div>
-      </div>
 
 
     <!-- Laz Latest Section -->
