--- a/src/app/nav-bar/laz-navbar.html
+++ b/src/app/nav-bar/laz-navbar.html
@@ -13,6 +13,9 @@
       <li class="nav-item mr-4" *ngIf="(authService.userSignedIn$ | async)">
         <a class="nav-link" routerLink="/beans" routerLinkActive="active">LAZBEANS</a>
       </li>
+      <li class="nav-item mr-4">
+        <a class="nav-link" routerLink="/resources" routerLinkActive="active">RESOURCES</a>
+      </li>
       <li class="nav-item dropdown mr-3">
         <a class="nav-link dropdown-toggle" id="getInvolvedDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           GET INVOLVED
