Added Feedback Button

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -71,3 +71,10 @@
   font-family: Lato-Heavy;
   src: url('../assets/fonts/Lato/Lato-Heavy.ttf');
 }
+
+#feedback {
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
+}
+
