Placed max-width in global css file for margin resizing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,5 +19,5 @@
   </div> -->
   <!-- User signed in?
   {{authService.userSignedIn$ | async}} -->
-  <router-outlet></router-outlet>
+  <div class="container-fluid"><router-outlet></router-outlet></div>
   <button type="button" class="btn btn-outline-warning" id="feedback">Submit Feedback</button>
