--- a/src/app/event-page/event-page.component.html
+++ b/src/app/event-page/event-page.component.html
@@ -8,8 +8,8 @@
           <span class="datetime-location">{{event.start_date_time | getLongDate}}</span><br>
           <span class="datetime-location">{{event.location}}</span>
           <br><br>
-          <div class="register-button">
-            <span class="register-text" (click)="registerForEvent()" style="cursor: pointer;">Register</span>
+          <div class="register-button" style="cursor: pointer">
+            <span class="register-text" (click)="registerForEvent()">Register</span>
           </div>
         </div>
       </div>
