Bootstrap Collapse Added to LazSoc team section

--- a/src/app/club-detail/club-detail.component.css
+++ b/src/app/club-detail/club-detail.component.css
@@ -1,3 +1,9 @@
+h5 {
+  font-family: Lato;
+  text-align: center;
+  color: black;
+}
+
 .left-content-pane {
   margin-left:3.5%;
   margin-right: 8px;
