--- a/src/app/club-detail/club-detail.component.css
+++ b/src/app/club-detail/club-detail.component.css
@@ -1,7 +1,8 @@
-h5 {
+h5, h5 > a {
   font-family: Lato;
-  text-align: center;
+  font-weight: 600;
   color: black;
+  text-align: center;
 }
 
 .left-content-pane {
@@ -162,4 +163,10 @@ h5 {
 .icon {
   height:18px;
   margin-right:10px;
+}
+
+.head-shot {
+  height: 160px;
+  width: 160px;
+  border: 1px solid black;
 }
