--- a/src/app/article-composer/article-composer.component.html
+++ b/src/app/article-composer/article-composer.component.html
@@ -4,13 +4,36 @@
       Preview
     </div>
     <br><br>
-    <div [froalaEditor]="options" [(froalaModel)]="editorContent" *ngIf="editorView"></div>
-    <br><br>
+    <h1> Compose an Article </h1>
+    <form>
+      <input #titleValdation="ngModel" type="text" placeholder="Article Title" name="title" [(ngModel)]="title" required minlength="4" maxlength="30">
+      <div *ngIf="titleValdation.errors && (titleValdation.dirty || titleValdation.touched)" class="alert alert-danger">
+        <div [hidden]="!titleValdation.errors.required">
+          Article title is required!
+        </div>
+        <div [hidden]="!titleValdation.errors.minlength">
+          Title must be at least 4 characters long.
+        </div>
+        <div [hidden]="!titleValdation.errors.maxlength">
+          Title cannot be more than 30 characters long.
+        </div>
+      </div>
+      <div [froalaEditor]="options" [(froalaModel)]="editorContent" *ngIf="editorView"></div>
+
+      <br><br>
       <div class="card" *ngIf="!editorView">
         <div class="card-block">
           <div [froalaView]="editorContent"></div>
         </div>
       </div>
-      
+      <button type="submit" (click)="submit()"> SUBMIT ARTICLE </button>
+    </form>
+    <br><br>
+    <h2><u>Read an Article</u></h2>
+    <div *ngFor="let a of articles">
+      <h3 (click)=showArticle(a.id) class="cursor-pointer">{{a.title}}</h3>
+      <p *ngIf="a.id" [innerHTML]="a.body"></p>   
+    </div>
   </div>
 </div>
+
