--- a/src/app/club-detail/club-detail.component.html
+++ b/src/app/club-detail/club-detail.component.html
@@ -73,7 +73,7 @@
                       <div *ngFor="let person of portfolio.team" class="persons">
                         <img src="{{person.image}}" class="head-shot">
                         <h6 class="mt-2">{{person.name}}</h6>
-                        <p>{{person.title}}</p>
+                        <p class="title-text">{{person.title}}</p>
                       </div>
                     </div>
                   </div>
